--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                         <article class="certificate-container"> 
                             <a href="https://www.linkedin.com/feed/update/urn:li:activity:7025285828809551872/" target="_blank" role="link"><img src="src/imgs/icons/google-cloud.png" alt="Link to Davids Google Cloud Computing Foundations certificate"></a>
                         </article>
+                        
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9c2c0cf6-105c-4d8d-9e7b-8ae3c8ec3589" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                     </div>
                 </div>
                 <div class="container" id="skills">
