--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
                         CERTIFICATES
                     </button>
                     <div class="container-body" id="certificates-body">
-                        <article class="certificate-container"> 
-                            <a href="https://www.credly.com/badges/53de31ae-acd5-4fc6-ade1-f1f48b84b077/linked_in_profile" target="_blank" role="link"><img src="src/imgs/icons/azure-logo.png" alt="Link to Davids Azure Fundamentals certificate"></a>
-                        </article>
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="53de31ae-acd5-4fc6-ade1-f1f48b84b077" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                         <article class="certificate-container"> 
                             <a href="https://www.linkedin.com/feed/update/urn:li:activity:7025285828809551872/" target="_blank" role="link"><img src="src/imgs/icons/google-cloud.png" alt="Link to Davids Google Cloud Computing Foundations certificate"></a>
                         </article>
