--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             </div>
             
             <h2 class="large" id="welcome">HI THERE, I AM </h2>
-            <h1 id="david-name"><span class="hover">DAVID PERALES</span></h1>
-            <h2 class="large" id="david-info">A <span class="hover">computer engineering student</span>  passionate about responsive web development and artificial intelligence</h2>
+            <h1 id="david-name"><strong>DAVID PERALES</strong></h1>
+            <h2 class="large" id="david-info">A <strong>computer engineering student</strong>  passionate about responsive web development and artificial intelligence</h2>
             <ul class="links">
-                <li><a href="https://www.linkedin.com/in/dpr-unam/" target="_blank" role="link"><img src="src/imgs/icons/icon-linkedin.png" alt="Link to Davids LinkedIn profile"></a></li>
-                <li><a href="https://github.com/L00vely" target="_blank" role="link"><img src="src/imgs/icons/icon-github.png" alt="Link to Davids Github profile"></a></li>
-                <li><a href="https://www.youtube.com/channel/UCh23-MSKwTgO_c7UcaD3CIQ" target="_blank" role="link"><img src="src/imgs/icons/icon-youtube.png" alt="Link to Davids Youtube channel"></a></li>
-                <li><a href="https://dribbble.com/L00vely" target="_blank" role="link"><img src="src/imgs/icons/icon-dribbble.png" alt="Link to Davids Dribbble profile"></a></li>
+                <li><a href="https://www.linkedin.com/in/dpr-unam/" target="_blank" role="link"><img src="src/imgs/icons/linkedin.png" alt="Link to Davids LinkedIn profile"></a></li>
+                <li><a href="https://github.com/L00vely" target="_blank" role="link"><img src="src/imgs/icons/github.png" alt="Link to Davids Github profile"></a></li>
+                <li><a href="https://www.youtube.com/channel/UCh23-MSKwTgO_c7UcaD3CIQ" target="_blank" role="link"><img src="src/imgs/icons/youtube.png" alt="Link to Davids Youtube channel"></a></li>
+                <li><a href="https://dribbble.com/L00vely" target="_blank" role="link"><img src="src/imgs/icons/dribbble.png" alt="Link to Davids Dribbble profile"></a></li>
             </ul>
             <a href="mailto:peralesrodriguezdavid@gmail.com" class="hover email">peralesrodriguezdavid@gmail.com</a>
         </section>
@@ -42,20 +42,16 @@
         <section id="principal-section">
             <div id="left">
                 <div class="container" id="certificates">
-                    <button class="container-title hover"   role="button" aria-labelledby="Show certificates" id="button-certificates">
+                    <button class="container-title"   role="button" aria-labelledby="Show certificates" id="button-certificates">
                         CERTIFICATES
                     </button>
                     <div class="container-body" id="certificates-body">
-                        <article class="certificate-container"> 
-                            <a href="https://www.credly.com/badges/53de31ae-acd5-4fc6-ade1-f1f48b84b077/linked_in_profile" target="_blank" role="link"><img src="src/imgs/icons/azure-logo.png" alt="Link to Davids Azure Fundamentals certificate"></a>
-                        </article>
-                        <article class="certificate-container"> 
-                            <a href="https://www.linkedin.com/feed/update/urn:li:activity:7025285828809551872/" target="_blank" role="link"><img src="src/imgs/icons/google-cloud.png" alt="Link to Davids Google Cloud Computing Foundations certificate"></a>
-                        </article>
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="53de31ae-acd5-4fc6-ade1-f1f48b84b077" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9c2c0cf6-105c-4d8d-9e7b-8ae3c8ec3589" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                     </div>
                 </div>
                 <div class="container" id="skills">
-                    <button class="container-title hover"  role="button" aria-labelledby="Show skills" id="button-skills">
+                    <button class="container-title"  role="button" aria-labelledby="Show skills" id="button-skills">
                         SKILLS
                     </button>
                     <div class="container-body" role="presentation" id="skills-body">
@@ -105,7 +101,7 @@
             </div>
             <div id="right">
                 <div class="container" id="projects">
-                    <button class="container-title hover"  role="button" aria-labelledby="Show skills" id="button-projects">
+                    <button class="container-title"  role="button" aria-labelledby="Show skills" id="button-projects">
                         PROJECTS
                     </button>
                     <div class="container-body" id="projects-body"> 
